--- a/_sass/jekyll-theme-chirpy.scss
+++ b/_sass/jekyll-theme-chirpy.scss
@@ -6,6 +6,8 @@
  * MIT Licensed
  */
 
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
+
 @import
   "colors/light-typography",
   "colors/dark-typography",
