--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -7,7 +7,8 @@
 %heading {
   color: var(--heading-color);
   font-weight: 400;
-  font-family: Lato, "Microsoft Yahei", sans-serif;
+  //font-family: Lato, "Microsoft Yahei", sans-serif;
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
 %section {
