--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -33,7 +33,7 @@ body {
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   //font-family: "Source Sans Pro", "Microsoft Yahei", sans-serif;
-  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Pretendard Variable", Pretendard, Roboto, "Noto Sans KR", "Segoe UI", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
   line-height: 1.75;
 }
 
