--- a/_includes/head.html
+++ b/_includes/head.html
@@ -108,7 +108,7 @@
   <!-- JavaScript -->
 
   <script src="{{ site.data.assets[origin].jquery.js | relative_url }}"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.1.2/Chart.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.1.2/Chart.js"></script>
 
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
