--- a/_includes/head.html
+++ b/_includes/head.html
@@ -108,7 +108,8 @@
   <!-- JavaScript -->
 
   <script src="{{ site.data.assets[origin].jquery.js | relative_url }}"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.1.2/chart.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
