Update KaTeX option

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -116,7 +116,14 @@
   <script>
       document.addEventListener("DOMContentLoaded", function() {
           renderMathInElement(document.body, {
-              // ...options...
+            delimiters: [
+              {left: '$$', right: '$$', display: true},
+              {left: '$', right: '$', display: false},
+              {left: '\\(', right: '\\)', display: false},
+              {left: '\\[', right: '\\]', display: true}
+          ],
+          // • rendering keys, e.g.:
+          throwOnError : false
           });
       });
   </script>
